force-app/main/default/objects/Task/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Completed Tasks</relationshipLabel>
    <relationshipName>Completed_Tasks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>