force-app/main/default/objects/Task/fields/Is_Gate__c.field-meta.xml
<CustomField>
    <fullName>Is_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gate Task</label>
    <type>Checkbox</type>
</CustomField>