force-app/main/default/objects/Task/fields/Overdue_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overdue Alert Sent</label>
    <type>Checkbox</type>
</CustomField>