force-app/main/default/objects/Task/fields/Sequence_Task__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sequence Task</label>
    <type>Checkbox</type>
</CustomField>