force-app/main/default/objects/Task/listViews/All_Pre_Mob_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Pre_Mob_Tasks</fullName>
    <columns>Subject</columns>
    <columns>WHAT_NAME</columns>
    <columns>Pre_Mob_Section__c</columns>
    <columns>OwnerId</columns>
    <columns>ActivityDate</columns>
    <columns>Status</columns>
    <columns>Is_Gate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pre_Mob_Section__c</field>
        <operation>includes</operation>
        <value>A. Financial + Scope,B. Staffing,C. Safety,D. Training,E. Tools + Fleet,F. Procurement,G. Schedule,H. Client Alignment,Sign-off</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>All Pre-Mob Tasks</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>