force-app/main/default/objects/Task/listViews/Completed_Sequence_Tasks.listView-meta.xml
<ListView>
    <fullName>Completed_Sequence_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Task.Sequence_Task__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Completed Tasks</label>
</ListView>