force-app/main/default/objects/Task/listViews/HTS_Premob_Tasks.listView-meta.xml
<ListView>
    <fullName>HTS_Premob_Tasks</fullName>
    <columns>SUBJECT</columns>
    <columns>Customer_Site__c</columns>
    <columns>Job_Code__c</columns>
    <columns>Pre_Mob_Section__c</columns>
    <columns>PRIORITY</columns>
    <columns>Is_Gate__c</columns>
    <columns>STATUS</columns>
    <columns>ASSIGNED_TO</columns>
    <columns>Completed_By__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>HTS Pre-Mob Tasks</label>
</ListView>