force-app/main/default/objects/Task/listViews/HTS_Premob_Tasks_Due_Next_7_Days.listView-meta.xml
<ListView>
    <fullName>HTS_Premob_Tasks_Due_Next_7_Days</fullName>
    <columns>SUBJECT</columns>
    <columns>Customer_Site__c</columns>
    <columns>Job_Code__c</columns>
    <columns>Pre_Mob_Section__c</columns>
    <columns>PRIORITY</columns>
    <columns>Is_Gate__c</columns>
    <columns>STATUS</columns>
    <columns>Completed_By__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActivityDate</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ActivityDate</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <label>HTS Pre-Mob Tasks - Due Next 7 Days</label>
</ListView>