force-app/main/default/objects/Task/listViews/My_Open_Pre_Mob_Tasks.listView-meta.xml
<ListView>
    <fullName>My_Open_Pre_Mob_Tasks</fullName>
    <columns>SUBJECT</columns>
    <columns>Pre_Mob_Section__c</columns>
    <columns>WHAT_NAME</columns>
    <columns>ACTIVITY_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <columns>Is_Gate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Pre_Mob_Section__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Open Pre-Mob Tasks</label>
</ListView>