force-app/main/default/objects/Task/listViews/My_Tasks_This_Week.listView-meta.xml
<ListView>
    <fullName>My_Tasks_This_Week</fullName>
    <columns>SUBJECT</columns>
    <columns>WHAT_NAME</columns>
    <columns>ACTIVITY_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <columns>Is_Gate__c</columns>
    <columns>Pre_Mob_Section__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ActivityDate</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Tasks This Week</label>
</ListView>