force-app/main/default/objects/Task/listViews/Tasks_Next_3_Days.listView-meta.xml
<ListView>
    <fullName>Tasks_Next_3_Days</fullName>
    <columns>SUBJECT</columns>
    <columns>WHO_NAME</columns>
    <columns>DUE_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.OWNERID</field>
        <operation>equals</operation>
        <value>005fI0000049deAQAQ</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:3</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Tasks — Next 3 Days</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>